// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Navigation/ErrorPages/500 Default 1`] = `
<div
  className="sc-bdfBwQ gFQERV"
>
  <div
    className="sc-higXBA fqiill sc-error-page500"
  >
    <div
      className="sc-clsHhM kfZrdj"
    >
      <i
        className="sc-fbkhIv jjYirT fas fa-exclamation-triangle fa-2x"
      />
      <h2
        className="sc-ehSCib dYJZVF"
      >
        Unexpected Error
      </h2>
    </div>
    <div
      className="sc-clsHhM kfZrdj"
    >
      <div
        className="sc-lcujXC bTuGno"
      >
        <p
          className="sc-gGmIRh beUVho"
        >
          An error occured and your request cannot be completed.
        </p>
        <p
          className="sc-gGmIRh beUVho"
        >
          You might check the url, or contact your admin if the error remains.
        </p>
      </div>
    </div>
    <a
      className="sc-fodVxV gdXFRf sc-button"
      disabled={false}
      href="/"
      size="large"
      title=""
    >
      <span
        className="sc-kstrdz ZegCk"
      >
        Return Home
      </span>
    </a>
  </div>
</div>
`;

exports[`Storyshots Components/Navigation/ErrorPages/500 With Locale 1`] = `
<div
  className="sc-bdfBwQ gFQERV"
>
  <div
    className="sc-higXBA fqiill sc-error-page500"
  >
    <div
      className="sc-clsHhM kfZrdj"
    >
      <i
        className="sc-fbkhIv jjYirT fas fa-exclamation-triangle fa-2x"
      />
      <h2
        className="sc-ehSCib dYJZVF"
      >
        Erreur inattendue
      </h2>
    </div>
    <div
      className="sc-clsHhM kfZrdj"
    >
      <div
        className="sc-lcujXC bTuGno"
      >
        <p
          className="sc-gGmIRh beUVho"
        >
          Une erreur s'est produite et votre demande ne peut être complétée.
        </p>
        <p
          className="sc-gGmIRh beUVho"
        >
          Vous pouvez vérifier l'url, ou contacter votre administrateur si l'erreur persiste.
        </p>
        <p
          className="sc-gGmIRh beUVho"
        >
          Vous pouvez également contacter le 
          <a
            className="sc-GqfZa foABYa"
            href="https://www.scality.com/support/"
          >
            support 
            <i
              className="fas fa-external-link-alt"
            />
          </a>
           pour signaler ce problème.
        </p>
      </div>
    </div>
    <a
      className="sc-fodVxV gdXFRf sc-button"
      disabled={false}
      href="/"
      size="large"
      title=""
    >
      <span
        className="sc-kstrdz ZegCk"
      >
        Retour à l'accueil
      </span>
    </a>
  </div>
</div>
`;

exports[`Storyshots Components/Navigation/ErrorPages/500 With Support Link 1`] = `
<div
  className="sc-bdfBwQ gFQERV"
>
  <div
    className="sc-higXBA fqiill sc-error-page500"
  >
    <div
      className="sc-clsHhM kfZrdj"
    >
      <i
        className="sc-fbkhIv jjYirT fas fa-exclamation-triangle fa-2x"
      />
      <h2
        className="sc-ehSCib dYJZVF"
      >
        Unexpected Error
      </h2>
    </div>
    <div
      className="sc-clsHhM kfZrdj"
    >
      <div
        className="sc-lcujXC bTuGno"
      >
        <p
          className="sc-gGmIRh beUVho"
        >
          An error occured and your request cannot be completed.
        </p>
        <p
          className="sc-gGmIRh beUVho"
        >
          You might check the url, or contact your admin if the error remains.
        </p>
        <p
          className="sc-gGmIRh beUVho"
        >
          You may also contact 
          <a
            className="sc-GqfZa foABYa"
            href="https://www.scality.com/support/"
          >
            support 
            <i
              className="fas fa-external-link-alt"
            />
          </a>
           to report this issue.
        </p>
      </div>
    </div>
    <a
      className="sc-fodVxV gdXFRf sc-button"
      disabled={false}
      href="/"
      size="large"
      title=""
    >
      <span
        className="sc-kstrdz ZegCk"
      >
        Return Home
      </span>
    </a>
  </div>
</div>
`;
